--- a/ExViewer/Strings/en/Resources.resw
+++ b/ExViewer/Strings/en/Resources.resw
@@ -294,7 +294,7 @@ Dimensions: {2} × {3}</value>
     <value>Open in browser</value>
   </data>
   <data name="ImagePageOpenInExplorerButton.Content" xml:space="preserve">
-    <value>Open in explorer</value>
+    <value>Open in File Explorer</value>
   </data>
   <data name="ImagePageReloadAppBarButton.Label" xml:space="preserve">
     <value>Reload</value>
@@ -432,5 +432,8 @@ Go "Settings -&gt; Accounts - Sign-in options -&gt; PIN -&gt; Add" to do this.</
   </data>
   <data name="VerifyRetriesExhausted" xml:space="preserve">
     <value>You have exceeded the allowed number of verification. Plaese restart the app and try again.</value>
+  </data>
+  <data name="ImagePageImageFileInfoDefault" xml:space="preserve">
+    <value>The image hasn't finished loading.</value>
   </data>
 </root>
