--- a/ExViewer/Strings/en/Resources.resw
+++ b/ExViewer/Strings/en/Resources.resw
@@ -144,22 +144,22 @@
   <data name="AppDisplayName" xml:space="preserve">
     <value>E-Viewer</value>
   </data>
-  <data name="CachePageClearCacheAppBarButton.Label" xml:space="preserve">
+  <data name="SavedPageClearCacheAppBarButton.Label" xml:space="preserve">
     <value>Delete all</value>
   </data>
-  <data name="CachePageDeleteMenuFlyout.Text" xml:space="preserve">
+  <data name="SavedPageDeleteMenuFlyout.Text" xml:space="preserve">
     <value>Delete</value>
   </data>
-  <data name="CachePageEmptyTextBlock.Text" xml:space="preserve">
+  <data name="SavedPageEmptyTextBlock.Text" xml:space="preserve">
     <value>No saved galleries</value>
   </data>
-  <data name="CachePageLoadingMoreTextBlock.Text" xml:space="preserve">
+  <data name="SavedPageLoadingMoreTextBlock.Text" xml:space="preserve">
     <value>Loading more galleries...</value>
   </data>
-  <data name="CachePageRefreshAppBarButton.Label" xml:space="preserve">
+  <data name="SavedPageRefreshAppBarButton.Label" xml:space="preserve">
     <value>Refresh</value>
   </data>
-  <data name="CachePageSaveToMenuFlyout.Text" xml:space="preserve">
+  <data name="SavedPageSaveToMenuFlyout.Text" xml:space="preserve">
     <value>Save to...</value>
   </data>
   <data name="Cancel" xml:space="preserve">
