--- a/ExViewer/Strings/zh-cn/Resources.resw
+++ b/ExViewer/Strings/zh-cn/Resources.resw
@@ -165,10 +165,10 @@
   <data name="Cancel" xml:space="preserve">
     <value>取消</value>
   </data>
-  <data name="ClearCacheDialogContent" xml:space="preserve">
+  <data name="ClearSacedDialogContent" xml:space="preserve">
     <value>所有保存的画集将被删除！</value>
   </data>
-  <data name="ClearCacheDialogTitle" xml:space="preserve">
+  <data name="ClearSavedDialogTitle" xml:space="preserve">
     <value>警告</value>
   </data>
   <data name="Exit" xml:space="preserve">
@@ -353,7 +353,7 @@
   <data name="RootControlAboutSplitViewTab.Content" xml:space="preserve">
     <value>关于</value>
   </data>
-  <data name="RootControlCacheSplitViewTab.Content" xml:space="preserve">
+  <data name="RootControlSavedSplitViewTab.Content" xml:space="preserve">
     <value>保存的画集</value>
   </data>
   <data name="RootControlChangeUserButton.ToolTipService.ToolTip" xml:space="preserve">
@@ -438,5 +438,29 @@
   </data>
   <data name="GalleryPageTagNameSpaceColumnDefinition.Width" xml:space="preserve">
     <value>68</value>
+  </data>
+  <data name="EhWikiDialogContentDialog.PrimaryButtonText" xml:space="preserve">
+    <value>确定</value>
+  </data>
+  <data name="ClearCachedDialogContent" xml:space="preserve">
+    <value>所有缓存的画集将被删除！</value>
+  </data>
+  <data name="ClearCachedDialogTitle" xml:space="preserve">
+    <value>警告</value>
+  </data>
+  <data name="CachedPageDeleteAllAppBarButton.Label" xml:space="preserve">
+    <value>删除全部</value>
+  </data>
+  <data name="CachedPageDeleteMenuFlyout.Text" xml:space="preserve">
+    <value>删除</value>
+  </data>
+  <data name="CachedPageEmptyTextBlock.Text" xml:space="preserve">
+    <value>没有缓存的画集</value>
+  </data>
+  <data name="CachedPageLoadingMoreTextBlock.Text" xml:space="preserve">
+    <value>正在加载更多画集…</value>
+  </data>
+  <data name="CachedPageRefreshAppBarButton.Label" xml:space="preserve">
+    <value>刷新</value>
   </data>
 </root>
