--- a/ExViewer/Strings/en/Resources.resw
+++ b/ExViewer/Strings/en/Resources.resw
@@ -344,10 +344,10 @@ Full screen			ENTER</value>
   <data name="ParseByteException" xml:space="preserve">
     <value>Can't parse the given string to a byte size.</value>
   </data>
-  <data name="PullRefreshProgressControl.PullToRefreshText" xml:space="preserve">
+  <data name="PullToRefreshIndicatorPullTextBlock.Text" xml:space="preserve">
     <value>Pull to refresh</value>
   </data>
-  <data name="PullRefreshProgressControl.ReleaseToRefreshText" xml:space="preserve">
+  <data name="PullToRefreshIndicatorReleaseTextBlock.Text" xml:space="preserve">
     <value>Release to refresh</value>
   </data>
   <data name="RootControlAboutSplitViewTab.Content" xml:space="preserve">
@@ -389,7 +389,7 @@ Full screen			ENTER</value>
   <data name="SearchPageLowPowerTagsCheckBox.Content" xml:space="preserve">
     <value>Search low-power tags</value>
   </data>
-  <data name="SearchPageMinRatingTextBlock.Text" xml:space="preserve">
+  <data name="SearchPageMinRatingCheckBox.Content" xml:space="preserve">
     <value>Minimum rating: </value>
   </data>
   <data name="SearchPageNamesCheckBox.Content" xml:space="preserve">
