move about to settings; cachedgallery & galleryimageplaceolder improvment
Former-commit-id: d5e7225bce1c6765eb31e386226916044bdd2a5d [formerly 9baedb15bd9fa131b9c10970f87daf1b4be4a6be]
Former-commit-id: efab043962d83452ea8efd5dec1424940f217751

--- a/ExViewer/Strings/en/Settings.resw
+++ b/ExViewer/Strings/en/Settings.resw
@@ -273,4 +273,10 @@
   <data name="Vietnamese" xml:space="preserve">
     <value>Vietnamese</value>
   </data>
+  <data name="About" xml:space="preserve">
+    <value>关于</value>
+  </data>
+  <data name="AboutContent" xml:space="preserve">
+    <value />
+  </data>
 </root>
