--- a/ExViewer/Strings/en/Settings.resw
+++ b/ExViewer/Strings/en/Settings.resw
@@ -279,4 +279,7 @@
   <data name="AboutContent" xml:space="preserve">
     <value />
   </data>
+  <data name="ExcludedTagNamespaces" xml:space="preserve">
+    <value>Excluded tag namespaces</value>
+  </data>
 </root>
