--- a/ExClient/Strings/zh-cn/NameSpace.resw
+++ b/ExClient/Strings/zh-cn/NameSpace.resw
@@ -144,4 +144,7 @@
   <data name="Reclass" xml:space="preserve">
     <value>重新分类</value>
   </data>
+  <data name="Unknown" xml:space="preserve">
+    <value>未知</value>
+  </data>
 </root>
