--- a/ExClient/Strings/en/NameSpace.resw
+++ b/ExClient/Strings/en/NameSpace.resw
@@ -144,4 +144,7 @@
   <data name="Reclass" xml:space="preserve">
     <value>Reclass</value>
   </data>
+  <data name="Unknown" xml:space="preserve">
+    <value>Unknown</value>
+  </data>
 </root>
