lazyload for favorite tag
Former-commit-id: 6685203e0a31d05048c41473d21eb0c8f9379a1f [formerly f99d78625a61e048ad23ff6b316ac571bced7d2b]
Former-commit-id: 58fb01ef677bf5b8e34310b78bd3993012d03212

--- a/ExViewer/Strings/zh-cn/Resources.resw
+++ b/ExViewer/Strings/zh-cn/Resources.resw
@@ -505,4 +505,7 @@
   <data name="FavoritesPageLoadingMoreTextBlock.Text" xml:space="preserve">
     <value>正在加载更多画集…</value>
   </data>
+  <data name="EhWikiDialogTagNotFound" xml:space="preserve">
+    <value>在 EhWiki 中未找到此标签。</value>
+  </data>
 </root>
