--- a/ExViewer/Strings/en/Resources.resw
+++ b/ExViewer/Strings/en/Resources.resw
@@ -505,4 +505,7 @@ Go "Settings -&gt; Accounts - Sign-in options -&gt; PIN -&gt; Add" to do this.</
   <data name="FavoritesPageLoadingMoreTextBlock.Text" xml:space="preserve">
     <value>Loading more galleries...</value>
   </data>
+  <data name="EhWikiDialogTagNotFound" xml:space="preserve">
+    <value>Tag not found in wiki.</value>
+  </data>
 </root>
