Add e-hentai support
Former-commit-id: 968fa29f0fd23b3105486f11944c489ef270214d [formerly e3cb1f6243fb5fa65fd5dab2ec67723edf79c07a]
Former-commit-id: 06c7f187d94eb6e6b8939a65c08840e30306da39

--- a/ExViewer/Strings/en/Settings.resw
+++ b/ExViewer/Strings/en/Settings.resw
@@ -279,4 +279,13 @@
   <data name="ExcludedTagNamespaces" xml:space="preserve">
     <value>Excluded tag namespaces</value>
   </data>
+  <data name="BooleanEh" xml:space="preserve">
+    <value>E-hentai</value>
+  </data>
+  <data name="BooleanEx" xml:space="preserve">
+    <value>Exhentai (need permittion of account)</value>
+  </data>
+  <data name="VisitEx" xml:space="preserve">
+    <value>Site to visit</value>
+  </data>
 </root>
